fix obscure horizontal scrolling issue
* width: 100% on footer was causing it to overflow page to the
  right by 200px (sidebar with)
* remove unneeded grid as it has negative margin, again
  overflowing to the right

These overflows cause issues with drag and drop libraries.

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,6 @@ html, body {
 
 #footer {
     margin-left: 200px;
-    width: 100%;
     padding-top: 1em;
     padding-bottom: 1em;
     bottom: 1em;
